Tests no longer use deprecated package. Updated shields in README.

--- a/codeception.yml
+++ b/codeception.yml
@@ -12,7 +12,7 @@ modules:
     config:
         Yii2:
             configFile: 'tests/_app/config/test.php'
-            cleanup: false
+#            cleanup: false
 coverage:
     enabled: true
     include:
