--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,10 @@
         "yiisoft/yii2": "^2.0.0",
         "yiisoft/yii2-swiftmailer": "^2.0.0",
         "yiisoft/yii2-authclient": "^2.1.0",
-        "yiisoft/yii2-bootstrap": "^2.0.0"
+        "yiisoft/yii2-bootstrap": "^2.0.0",
+        "codeception/codeception": "^2.3"
     },
     "require-dev": {
-        "yiisoft/yii2-codeception": "^2.0.0",
         "codeception/specify": "^0.4.3",
         "codeception/verify": "^0.3.1"
     },
